force-app/main/default/objects/LeadConversionFieldSetting__mdt/LeadConversionFieldSetting__mdt.object-meta.xml
<CustomObject>
    <description>CRM-1478</description>
    <label>Lead Conversion Field Setting</label>
    <pluralLabel>Lead Conversion Field Settings</pluralLabel>
</CustomObject>