force-app/main/default/objects/LeadConversionFieldSetting__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <metadataRelationshipControllingField>LeadConversionFieldSetting__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>LeadConversionFieldSettings</relationshipLabel>
    <relationshipName>LeadConversionFieldSettings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>