force-app/main/default/objects/LeadConversionFieldSetting__mdt/fields/MergeOrder__c.field-meta.xml
<CustomField>
    <fullName>MergeOrder__c</fullName>
    <label>Merge Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>