force-app/main/default/objects/LeadConversionFieldSetting__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>LeadConversionFieldSettings</relationshipLabel>
    <relationshipName>LeadConversionFieldSettings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>