force-app/main/default/objects/LeadConversionFieldSetting__mdt/fields/ShowMerge__c.field-meta.xml
<CustomField>
    <fullName>ShowMerge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Merge?</label>
    <type>Checkbox</type>
</CustomField>