force-app/main/default/objects/LeadConversionFieldSetting__mdt/fields/ShowTableColumn__c.field-meta.xml
<CustomField>
    <fullName>ShowTableColumn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Table Column?</label>
    <type>Checkbox</type>
</CustomField>