force-app/main/default/objects/LeadConversionFieldSetting__mdt/fields/TableOrder__c.field-meta.xml
<CustomField>
    <fullName>TableOrder__c</fullName>
    <label>Table Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>